Bug 255971 - applet settings dialogs are not completely translated
Summary: applet settings dialogs are not completely translated
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View (show other bugs)
Version: 2.4-GIT
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.4.0
Assignee: Amarok Developers
URL:
Keywords:
: 256058 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-03 15:42 UTC by Alexander Potashev
Modified: 2010-11-04 22:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In: 2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-11-03 15:42:20 UTC
Version:           2.4-GIT (using KDE 4.5.2) 
OS:                Linux

The title of any applet configuration dialog is not translated. Also, there are 2 common tabs in that dialog which are not translated.

Adding this line into MainWindow constructor fixes the problem (I didn't file a patch, because I don't know where this line should go):
   KGlobal::locale()->insertCatalog( "libplasma" );


Reproducible: Always
Comment 1 Kevin Funk 2010-11-04 21:24:52 UTC
*** Bug 256058 has been marked as a duplicate of this bug. ***
Comment 2 Johannes Obermayr 2010-11-04 21:32:26 UTC
Must it really be inserted manually or should it work as other plasma applets on workspace without inserting "libplasma" catalog manually?
Comment 3 Kevin Funk 2010-11-04 21:56:49 UTC
Not sure how it works. But it looks like translations cannot be loaded as the library is not directly linked to Amarok but to the several plugins which are loaded dynamically at runtime.

So feel free to commit if you have repository access, put it somewhere in MainWindow() as you said.
Comment 4 Alexander Potashev 2010-11-04 22:38:29 UTC
commit 36fabb9f7bbe0992f4492796869ba384a313b6ce
branch master
Author: Alexander Potashev <aspotashev@gmail.com>
Date:   Fri Nov 5 00:29:34 2010 +0300

    Applets' settings dialogs were partly untranslatable
    
    BUG: 255971

diff --git a/ChangeLog b/ChangeLog
index 28daaca..ad31a49 100644
--- a/ChangeLog
+++ b/ChangeLog
@@ -54,6 +54,7 @@ VERSION 2.4-Beta 1
       pressing SHIFT while clicking the action will bypass trash.
 
   BUGFIXES:
+    * Applets' settings dialogs were partly untranslatable. (BR 255971)
     * Fixed append&play action. Thanks Pieter van der Kloet for the patch. (BR 229706)
     * Don't ignore the "use relative path" checkbox in the playlist export dialog.
       (BR 250689)
diff --git a/src/MainWindow.cpp b/src/MainWindow.cpp
index 512241a..3907fb7 100644
--- a/src/MainWindow.cpp
+++ b/src/MainWindow.cpp
@@ -190,6 +190,8 @@ MainWindow::MainWindow()
              this, SLOT( slotNewTrackPlaying() ) );
     connect( engine, SIGNAL( trackMetadataChanged( Meta::TrackPtr ) ),
              this, SLOT( slotMetadataChanged( Meta::TrackPtr ) ) );
+
+    KGlobal::locale()->insertCatalog( "libplasma" );
 }
 
 MainWindow::~MainWindow()