Applets' settings dialogs were partly untranslatable

BUG: 255971